Grammatica/MascheroniParser.py
# Generated from .\Mascheroni.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MascheroniParser ( Parser ):

    grammarFileName = "Mascheroni.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'to'", "'construct'", "'given'", "'do'", 
                     "'done'", "'let'", "'='", "'define'", "'with'", "'and'", 
                     "'show'", "'showLabel'", "'if'", "'then'", "'fi'", 
                     "'else'", "'('", "')'", "'as'", "'upto'", "'['", "']'", 
                     "'_'", "'approximate'", "'point'", "'segment'", "'ray'", 
                     "'line'", "'circle'", "<INVALID>", "<INVALID>", "','", 
                     "'*'", "'/'", "'%'", "'+'", "'-'", "'=='", "'!='", 
                     "'>'", "'>='", "'<'", "'<='", "'!'", "'^'", "'^0'", 
                     "'^1'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "APPROXIMATE", "POINT", "SEGMENT", "RAY", "LINE", 
                      "CIRCLE", "NAME", "INT", "SEP", "MUL", "DIV", "MOD", 
                      "PLUS", "MINUS", "EQUAL", "NOTEQUAL", "GREATER", "GREATEREQ", 
                      "LESS", "LESSEQ", "BOOLNOT", "INTERSECT", "INTERSECTFR", 
                      "INTERSECTSC", "WS" ]

    RULE_start = 0
    RULE_construct = 1
    RULE_base_construct_res = 2
    RULE_base_construct_params = 3
    RULE_inductive_construct_res = 4
    RULE_inductive_construct_params = 5
    RULE_step = 6
    RULE_show = 7
    RULE_ifs = 8
    RULE_condition = 9
    RULE_named_expression = 10
    RULE_inductive_name = 11
    RULE_inductive_names = 12
    RULE_ente_expression = 13
    RULE_invocation_params = 14
    RULE_int_expression = 15
    RULE_int_name = 16
    RULE_name_name = 17
    RULE_expression_name = 18
    RULE_typed_name = 19
    RULE_typed_int_name = 20
    RULE_typed_name_name = 21

    ruleNames =  [ "start", "construct", "base_construct_res", "base_construct_params", 
                   "inductive_construct_res", "inductive_construct_params", 
                   "step", "show", "ifs", "condition", "named_expression", 
                   "inductive_name", "inductive_names", "ente_expression", 
                   "invocation_params", "int_expression", "int_name", "name_name", 
                   "expression_name", "typed_name", "typed_int_name", "typed_name_name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    APPROXIMATE=24
    POINT=25
    SEGMENT=26
    RAY=27
    LINE=28
    CIRCLE=29
    NAME=30
    INT=31
    SEP=32
    MUL=33
    DIV=34
    MOD=35
    PLUS=36
    MINUS=37
    EQUAL=38
    NOTEQUAL=39
    GREATER=40
    GREATEREQ=41
    LESS=42
    LESSEQ=43
    BOOLNOT=44
    INTERSECT=45
    INTERSECTFR=46
    INTERSECTSC=47
    WS=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MascheroniParser.EOF, 0)

        def APPROXIMATE(self):
            return self.getToken(MascheroniParser.APPROXIMATE, 0)

        def construct(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MascheroniParser.ConstructContext)
            else:
                return self.getTypedRuleContext(MascheroniParser.ConstructContext,i)


        def getRuleIndex(self):
            return MascheroniParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = MascheroniParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MascheroniParser.APPROXIMATE:
                self.state = 44
                self.match(MascheroniParser.APPROXIMATE)


            self.state = 48 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 47
                self.construct()
                self.state = 50 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MascheroniParser.T__0):
                    break

            self.state = 52
            self.match(MascheroniParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MascheroniParser.RULE_construct

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class InductiveConstructContext(ConstructContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MascheroniParser.ConstructContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(MascheroniParser.NAME, 0)
        def inductive_construct_res(self):
            return self.getTypedRuleContext(MascheroniParser.Inductive_construct_resContext,0)

        def inductive_construct_params(self):
            return self.getTypedRuleContext(MascheroniParser.Inductive_construct_paramsContext,0)

        def step(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MascheroniParser.StepContext)
            else:
                return self.getTypedRuleContext(MascheroniParser.StepContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInductiveConstruct" ):
                listener.enterInductiveConstruct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInductiveConstruct" ):
                listener.exitInductiveConstruct(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInductiveConstruct" ):
                return visitor.visitInductiveConstruct(self)
            else:
                return visitor.visitChildren(self)


    class BaseConstructContext(ConstructContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MascheroniParser.ConstructContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(MascheroniParser.NAME, 0)
        def base_construct_params(self):
            return self.getTypedRuleContext(MascheroniParser.Base_construct_paramsContext,0)

        def base_construct_res(self):
            return self.getTypedRuleContext(MascheroniParser.Base_construct_resContext,0)

        def step(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MascheroniParser.StepContext)
            else:
                return self.getTypedRuleContext(MascheroniParser.StepContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBaseConstruct" ):
                listener.enterBaseConstruct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBaseConstruct" ):
                listener.exitBaseConstruct(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBaseConstruct" ):
                return visitor.visitBaseConstruct(self)
            else:
                return visitor.visitChildren(self)



    def construct(self):

        localctx = MascheroniParser.ConstructContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_construct)
        self._la = 0 # Token type
        try:
            self.state = 84
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = MascheroniParser.BaseConstructContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.match(MascheroniParser.T__0)
                self.state = 55
                self.match(MascheroniParser.T__1)
                self.state = 56
                self.match(MascheroniParser.NAME)
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MascheroniParser.POINT) | (1 << MascheroniParser.SEGMENT) | (1 << MascheroniParser.RAY) | (1 << MascheroniParser.LINE) | (1 << MascheroniParser.CIRCLE))) != 0):
                    self.state = 57
                    self.base_construct_res()


                self.state = 60
                self.match(MascheroniParser.T__2)
                self.state = 61
                self.base_construct_params()
                self.state = 62
                self.match(MascheroniParser.T__3)
                self.state = 64 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 63
                    self.step()
                    self.state = 66 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MascheroniParser.T__5) | (1 << MascheroniParser.T__7) | (1 << MascheroniParser.T__8) | (1 << MascheroniParser.T__10) | (1 << MascheroniParser.T__11) | (1 << MascheroniParser.T__12))) != 0)):
                        break

                self.state = 68
                self.match(MascheroniParser.T__4)
                pass

            elif la_ == 2:
                localctx = MascheroniParser.InductiveConstructContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.match(MascheroniParser.T__0)
                self.state = 71
                self.match(MascheroniParser.T__1)
                self.state = 72
                self.match(MascheroniParser.NAME)
                self.state = 73
                self.inductive_construct_res()
                self.state = 74
                self.match(MascheroniParser.T__2)
                self.state = 75
                self.inductive_construct_params()
                self.state = 76
                self.match(MascheroniParser.T__3)
                self.state = 78 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 77
                    self.step()
                    self.state = 80 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MascheroniParser.T__5) | (1 << MascheroniParser.T__7) | (1 << MascheroniParser.T__8) | (1 << MascheroniParser.T__10) | (1 << MascheroniParser.T__11) | (1 << MascheroniParser.T__12))) != 0)):
                        break

                self.state = 82
                self.match(MascheroniParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Base_construct_resContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typed_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MascheroniParser.Typed_nameContext)
            else:
                return self.getTypedRuleContext(MascheroniParser.Typed_nameContext,i)


        def SEP(self, i:int=None):
            if i is None:
                return self.getTokens(MascheroniParser.SEP)
            else:
                return self.getToken(MascheroniParser.SEP, i)

        def getRuleIndex(self):
            return MascheroniParser.RULE_base_construct_res

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBase_construct_res" ):
                listener.enterBase_construct_res(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBase_construct_res" ):
                listener.exitBase_construct_res(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBase_construct_res" ):
                return visitor.visitBase_construct_res(self)
            else:
                return visitor.visitChildren(self)




    def base_construct_res(self):

        localctx = MascheroniParser.Base_construct_resContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_base_construct_res)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.typed_name()
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MascheroniParser.SEP:
                self.state = 87
                self.match(MascheroniParser.SEP)
                self.state = 88
                self.typed_name()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Base_construct_paramsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typed_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MascheroniParser.Typed_nameContext)
            else:
                return self.getTypedRuleContext(MascheroniParser.Typed_nameContext,i)


        def SEP(self, i:int=None):
            if i is None:
                return self.getTokens(MascheroniParser.SEP)
            else:
                return self.getToken(MascheroniParser.SEP, i)

        def getRuleIndex(self):
            return MascheroniParser.RULE_base_construct_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBase_construct_params" ):
                listener.enterBase_construct_params(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBase_construct_params" ):
                listener.exitBase_construct_params(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBase_construct_params" ):
                return visitor.visitBase_construct_params(self)
            else:
                return visitor.visitChildren(self)




    def base_construct_params(self):

        localctx = MascheroniParser.Base_construct_paramsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_base_construct_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.typed_name()
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MascheroniParser.SEP:
                self.state = 95
                self.match(MascheroniParser.SEP)
                self.state = 96
                self.typed_name()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Inductive_construct_resContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typed_name_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MascheroniParser.Typed_name_nameContext)
            else:
                return self.getTypedRuleContext(MascheroniParser.Typed_name_nameContext,i)


        def SEP(self, i:int=None):
            if i is None:
                return self.getTokens(MascheroniParser.SEP)
            else:
                return self.getToken(MascheroniParser.SEP, i)

        def getRuleIndex(self):
            return MascheroniParser.RULE_inductive_construct_res

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInductive_construct_res" ):
                listener.enterInductive_construct_res(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInductive_construct_res" ):
                listener.exitInductive_construct_res(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInductive_construct_res" ):
                return visitor.visitInductive_construct_res(self)
            else:
                return visitor.visitChildren(self)




    def inductive_construct_res(self):

        localctx = MascheroniParser.Inductive_construct_resContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_inductive_construct_res)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.typed_name_name()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MascheroniParser.SEP:
                self.state = 103
                self.match(MascheroniParser.SEP)
                self.state = 104
                self.typed_name_name()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Inductive_construct_paramsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typed_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MascheroniParser.Typed_nameContext)
            else:
                return self.getTypedRuleContext(MascheroniParser.Typed_nameContext,i)


        def typed_int_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MascheroniParser.Typed_int_nameContext)
            else:
                return self.getTypedRuleContext(MascheroniParser.Typed_int_nameContext,i)


        def SEP(self, i:int=None):
            if i is None:
                return self.getTokens(MascheroniParser.SEP)
            else:
                return self.getToken(MascheroniParser.SEP, i)

        def getRuleIndex(self):
            return MascheroniParser.RULE_inductive_construct_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInductive_construct_params" ):
                listener.enterInductive_construct_params(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInductive_construct_params" ):
                listener.exitInductive_construct_params(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInductive_construct_params" ):
                return visitor.visitInductive_construct_params(self)
            else:
                return visitor.visitChildren(self)




    def inductive_construct_params(self):

        localctx = MascheroniParser.Inductive_construct_paramsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_inductive_construct_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 110
                self.typed_name()
                pass

            elif la_ == 2:
                self.state = 111
                self.typed_int_name()
                pass


            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MascheroniParser.SEP:
                self.state = 114
                self.match(MascheroniParser.SEP)
                self.state = 117
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 115
                    self.typed_name()
                    pass

                elif la_ == 2:
                    self.state = 116
                    self.typed_int_name()
                    pass


                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StepContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MascheroniParser.RULE_step

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StepIfsContext(StepContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MascheroniParser.StepContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifs(self):
            return self.getTypedRuleContext(MascheroniParser.IfsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStepIfs" ):
                listener.enterStepIfs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStepIfs" ):
                listener.exitStepIfs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStepIfs" ):
                return visitor.visitStepIfs(self)
            else:
                return visitor.visitChildren(self)


    class StepWithContext(StepContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MascheroniParser.StepContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def named_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MascheroniParser.Named_expressionContext)
            else:
                return self.getTypedRuleContext(MascheroniParser.Named_expressionContext,i)

        def step(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MascheroniParser.StepContext)
            else:
                return self.getTypedRuleContext(MascheroniParser.StepContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStepWith" ):
                listener.enterStepWith(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStepWith" ):
                listener.exitStepWith(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStepWith" ):
                return visitor.visitStepWith(self)
            else:
                return visitor.visitChildren(self)


    class StepShowContext(StepContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MascheroniParser.StepContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def show(self):
            return self.getTypedRuleContext(MascheroniParser.ShowContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStepShow" ):
                listener.enterStepShow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStepShow" ):
                listener.exitStepShow(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStepShow" ):
                return visitor.visitStepShow(self)
            else:
                return visitor.visitChildren(self)


    class StepAssignementContext(StepContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MascheroniParser.StepContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(MascheroniParser.NAME, 0)
        def int_expression(self):
            return self.getTypedRuleContext(MascheroniParser.Int_expressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStepAssignement" ):
                listener.enterStepAssignement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStepAssignement" ):
                listener.exitStepAssignement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStepAssignement" ):
                return visitor.visitStepAssignement(self)
            else:
                return visitor.visitChildren(self)


    class StepDefineContext(StepContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MascheroniParser.StepContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def named_expression(self):
            return self.getTypedRuleContext(MascheroniParser.Named_expressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStepDefine" ):
                listener.enterStepDefine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStepDefine" ):
                listener.exitStepDefine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStepDefine" ):
                return visitor.visitStepDefine(self)
            else:
                return visitor.visitChildren(self)



    def step(self):

        localctx = MascheroniParser.StepContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_step)
        self._la = 0 # Token type
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MascheroniParser.T__10, MascheroniParser.T__11]:
                localctx = MascheroniParser.StepShowContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.show()
                pass
            elif token in [MascheroniParser.T__5]:
                localctx = MascheroniParser.StepAssignementContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.match(MascheroniParser.T__5)
                self.state = 126
                self.match(MascheroniParser.NAME)
                self.state = 127
                self.match(MascheroniParser.T__6)
                self.state = 128
                self.int_expression(0)
                pass
            elif token in [MascheroniParser.T__7]:
                localctx = MascheroniParser.StepDefineContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.match(MascheroniParser.T__7)
                self.state = 130
                self.named_expression()
                pass
            elif token in [MascheroniParser.T__8]:
                localctx = MascheroniParser.StepWithContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 131
                self.match(MascheroniParser.T__8)
                self.state = 132
                self.named_expression()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MascheroniParser.T__9:
                    self.state = 133
                    self.match(MascheroniParser.T__9)
                    self.state = 134
                    self.named_expression()
                    self.state = 139
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 140
                self.match(MascheroniParser.T__3)
                self.state = 142 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 141
                    self.step()
                    self.state = 144 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MascheroniParser.T__5) | (1 << MascheroniParser.T__7) | (1 << MascheroniParser.T__8) | (1 << MascheroniParser.T__10) | (1 << MascheroniParser.T__11) | (1 << MascheroniParser.T__12))) != 0)):
                        break

                self.state = 146
                self.match(MascheroniParser.T__4)
                pass
            elif token in [MascheroniParser.T__12]:
                localctx = MascheroniParser.StepIfsContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 148
                self.ifs()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MascheroniParser.RULE_show

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ShowNoLabelContext(ShowContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MascheroniParser.ShowContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShowNoLabel" ):
                listener.enterShowNoLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShowNoLabel" ):
                listener.exitShowNoLabel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShowNoLabel" ):
                return visitor.visitShowNoLabel(self)
            else:
                return visitor.visitChildren(self)


    class ShowLabelContext(ShowContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MascheroniParser.ShowContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShowLabel" ):
                listener.enterShowLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShowLabel" ):
                listener.exitShowLabel(self)
